# SmartAquarium

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
config/: CMakeLists.txt  feeder.xml  heater.xml  light.json  light.xml  light_sensor.xml  lighting.xml  ph.json  ph.xml  ph_sensor.xml  pinage.json  pinage.xml  temperature.json  temperature.xml  temperature_sensor.xml  thermal_sensor.xml
doc/: Doxyfile
script/: cppcheck.sh  doxygen.sh  format.sh  smartaquarium-firmware-upgrade.sh  smartaquarium-initial-setup.sh  smartaquarium-temperature-sensor.sh  tidy.sh  tier_one.sh  valgrind.sh  write-gpio.sh
script/sensor/: smartaquarium-light-sensor.sh  smartaquarium-temperature-sensor.sh
service/: CMakeLists.txt  smartaquarium-feeder.sh  smartaquarium-heater.sh  smartaquarium-light-sensor.sh  smartaquarium-lighting.sh  smartaquarium-ph-sensor.sh  smartaquarium-temperature-sensor.sh
src/: CMakeLists.txt  version.hpp.in
src/actuator/: CMakeLists.txt  actuator.cpp  actuator.hpp  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.hpp
src/application/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  mqtt_task.cpp  mqtt_task.hpp  task.cpp  task.hpp
src/device/: CMakeLists.txt  device.cpp  device.hpp
src/feeder/: CMakeLists.txt  feeder.cpp  feeder.hpp  main.cpp
src/heater/: CMakeLists.txt  heater.cpp  heater.hpp  main.cpp
src/lighting/: CMakeLists.txt  lighting.cpp  lighting.hpp  main.cpp
src/sensor/: CMakeLists.txt  main.cpp  sensor.cpp  sensor.hpp
src/task/: CMakeLists.txt  task.cpp  task.hpp
src/temperature_sensor/: CMakeLists.txt  main.cpp  temperature_sensor.cpp  temperature_sensor.hpp
src/thermal_sensor/: CMakeLists.txt  main.cpp  thermal_sensor.cpp  thermal_sensor.hpp
test/: CMakeLists.txt
test/application/: CMakeLists.txt  dummy_application.cpp  dummy_application.hpp  dummy_application.xml  dummy_main.cpp  main.cpp  test_application.cpp  test_application.hpp
test/device/: CMakeLists.txt  dummy_device.cpp  dummy_device.hpp  dummy_device.xml  dummy_main.cpp  main.cpp  test_device.cpp  test_device.hpp
test/util/: CMakeLists.txt  signal_handler.cpp  signal_handler.hpp  util.hpp
